--- a/src/App.module.css
+++ b/src/App.module.css
@@ -77,6 +77,9 @@
 }
 
 .controlsContainer {
+  display: flex;
+  align-content: flex-start;
+  justify-content: space-between;
   margin-top: 20px;
   padding: 15px;
   background-color: #f9fafb;
